[gd_scene load_steps=3 format=1]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[node name="Node2D" type="Node"]

script/script = ExtResource( 1 )

[node name="process_1" type="Sprite" parent="."]

transform/pos = Vector2( 0, 64 )
texture = ExtResource( 2 )
centered = false

[node name="process_2" type="Sprite" parent="."]

transform/pos = Vector2( 0, 128 )
texture = ExtResource( 2 )
centered = false

[node name="process_3" type="Sprite" parent="."]

transform/pos = Vector2( 0, 192 )
texture = ExtResource( 2 )
centered = false

[node name="byengine_1" type="RigidBody2D" parent="."]

transform/pos = Vector2( 32, 288 )
input/pickable = false
collision/layers = 1
collision/mask = 1
mode = 0
mass = 1.0
friction = 0.0
bounce = 0.0
gravity_scale = 1.0
custom_integrator = false
continuous_cd = 0
contacts_reported = 0
contact_monitor = false
sleeping = false
can_sleep = true
velocity/linear = Vector2( 60, 0 )
velocity/angular = 0.0
damp_override/linear = 0.0
damp_override/angular = -1.0

[node name="Sprite" type="Sprite" parent="byengine_1"]

texture = ExtResource( 2 )
modulate = Color( 0, 1, 0, 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="byengine_1"]

rect = Rect2( -32, -32, 64, 64 )

[node name="fixed_1" type="Sprite" parent="."]

transform/pos = Vector2( 0, 320 )
texture = ExtResource( 2 )
centered = false

[node name="fixed_2" type="Sprite" parent="."]

transform/pos = Vector2( 0, 384 )
texture = ExtResource( 2 )
centered = false

[connection signal="exit_screen" from="byengine_1/VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_exit_screen"]


